--- a/css/style.css
+++ b/css/style.css
@@ -11,15 +11,16 @@ body{
 	width: 100%;
 	height: 60px;
 	border-bottom:1px solid rgba(255, 255, 255 , .2);
-	background: #0077BB;
+	background: #04B755;
 	z-index: 90;
 }
 .logo{
 	position: relative;
 	float: left;
 	color: white;
+	font-size: 20pt;
 	height: 100%;
-	padding-top: 2px;
+	padding-top: 15px;
 	margin-left: 15px;
 }
 .logo:hover{
@@ -51,7 +52,7 @@ body{
 	width: 100%;
 	height: calc( 100vh - 60px);
 	margin-top: 60px;
-	background: #0077BB;
+	background: #04B755;
 
 }
 .introduccion{
@@ -129,7 +130,7 @@ body{
 .inttitle2{
 	position: relative;
 	float: left;
-	color: #0077BB;
+	color: #04B755;
 	width: 85%;
 	margin-top: 15px;
 	margin-left: 7.5%;
@@ -163,7 +164,7 @@ body{
 .inttxt strong{
 	position: relative;
 	float: left;
-	color: #0077BB;
+	color: #04B755;
 	text-align: left;
 	font-size: 16pt;
 }
@@ -200,7 +201,7 @@ body{
 	border:none;
 	cursor: pointer;
 	transition: .5s;
-	color: #0077BB;
+	color: #04B755;
 }
 .cont{
 	position: fixed; 
@@ -230,7 +231,7 @@ body{
 	margin-top: 60vh;
 	width: 100%;
 	height: 40vh;
-	background: #FA4504;
+	background: #F80E31;
 }
 .conta{
 	position: relative;
@@ -289,7 +290,7 @@ body{
 	margin-left: 20%;
 	margin-top: 2px;
 	height: 40px;
-	background: #0077BB;
+	background: #04B755;
 	color: white;
 	text-align: center;
 	padding-top: 8px;
@@ -327,7 +328,7 @@ body{
 	width: 30%;
 	margin-left: -15%;
 	left: 50%;
-	background: #0077BB;
+	background: #04B755;
 	color: white;
 	margin-bottom: 30px;
 	height:50px;
@@ -340,7 +341,7 @@ body{
 	width: 30%;
 	margin-left: -15%;
 	left: 50%;
-	background: #0077BB;
+	background: #04B755;
 	color: white;
 	margin-bottom: 30px;
 	height:50px;
@@ -354,7 +355,7 @@ body{
 	margin-left: 15%;
 	margin-top: 30px;
 	font-size: 21pt;
-	color: #0077BB;
+	color: #04B755;
 	text-align: center;
 }
 .contenedorevaluacion{
@@ -468,7 +469,7 @@ body{
   position: relative;
   float: left;
   width: 150px;
-  background: #0077BB;
+  background: #04B755;
   color: white;
   height: 40px;
   margin-top: 25px;
